<?xml version='1.0' encoding='UTF-8'?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fi.vm.sade.java-utils</groupId>
    <artifactId>java-utils</artifactId>
    <version>0.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>opintopolku-healthcheck-api</module>
        <module>java-properties</module>
        <module>oid-generator</module>
        <module>tcp-utils</module>
        <module>jetty-test-utils</module>
        <module>java-cas</module>
        <module>java-cxf</module>
        <module>httpclient</module>
        <module>url-connection-tester</module>
        <module>embedded-tomcat</module>
        <module>opintopolku-cas-servlet-filter</module>
        <module>java-auth</module>
        <module>java-http</module>
        <module>java-poi</module>
        <module>opintopolku-user-details-service</module>
        <module>java-cache</module>
        <module>opintopolku-spring-security</module>
        <module>legacy-cxf-cas</module>
        <module>legacy-caching-rest-client</module>
        <module>spring-aware-health-check-servlet</module>
        <module>opintopolku-jetty</module>
        <module>suomifi-valtuudet-client</module>
    </modules>
    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>1.8</version>
                                </requireJavaVersion>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <argLine>-Xms512M -Xmx1G</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>oph-sade-artifactory</id>
            <name>oph-sade-artifactory-releases</name>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
        </repository>
        <snapshotRepository>
            <id>oph-sade-artifactory</id>
            <name>oph-sade-artifactory-snapshots</name>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <releases>
                <enabled>false</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
            <id>oph-sade-artifactory</id>
            <name>oph-sade-artifactory-snapshots</name>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
        </repository>
        <repository>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
            <id>oph-sade-artifactory-releases</id>
            <name>oph-sade-artifactory-releases</name>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>

</project>
